# vjepa2

./: .gitignore  AGENTS.md  README.md  README_uv.md  pyproject.toml  requirements-test.txt  requirements.txt
app/surgwmbench/: __init__.py  eval_ac.py  future_prediction.py  pretrain_ssl.py  train_ac.py
src/datasets/: surgwmbench.py  surgwmbench_collators.py  surgwmbench_video.py
src/models/: surgwmbench_vjepa_ac.py
src/utils/: surgwmbench_metrics.py
tests/: surgwmbench_test_utils.py  test_surgwmbench_collate.py  test_surgwmbench_dataset.py  test_surgwmbench_metrics.py  test_surgwmbench_model_shapes.py  test_surgwmbench_pretrain_ssl.py  test_surgwmbench_train_eval.py
tools/: validate_surgwmbench_loader.py
